# Quant

./: .gitignore  README.md  pyproject.toml
scripts/: run_phase1_evaluation.py
src/: position_sizing.py
src/backtest/: costs.py  engine.py  metrics.py  walk_forward.py
src/data_layer/: fetcher.py
src/features/: __init__.py  engineering.py  splitting.py
src/indicators/: atr.py  bollinger.py  ema.py  macd.py  rsi.py
src/strategies/: base.py  mean_reversion.py  momentum.py  xgboost_signal.py
tests/: test_backtest_engine.py  test_feature_leakage.py  test_features.py  test_fetcher.py  test_indicators.py  test_leakage.py  test_metrics.py  test_strategies.py  test_xgboost_signal.py
