[project]
name = "quant-platform"
version = "0.1.0"
description = "AI Quant Trading Platform — backtesting and signal research"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.12"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"