[project]
name = "quant-platform"
version = "0.1.0"
description = "AI Quant Trading Platform — backtesting and signal research"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "yfinance>=0.2.40",
    "pyarrow>=14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--basetemp=.pytest-tmp"

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.12"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
